# TypeScript

./: .gitignore  README.md
Cookgram/backend/: Cargo.toml
Cookgram/backend/src/: main.rs
Cookgram/backend/src/api/: mod.rs
Cookgram/backend/src/api/applicationserver/: applicationserver.rs  mod.rs
Cookgram/backend/src/api/appstate/: appstate.rs  authstate.rs  mod.rs  userstate.rs
Cookgram/backend/src/api/daos/: addressdao.rs  authenticationdao.rs  dao.rs  mod.rs  useraddressdao.rs  userdao.rs
Cookgram/backend/src/api/dtos/: mod.rs
Cookgram/backend/src/api/errors/: autherror.rs  errorbody.rs  mod.rs  responseerror.rs  usererror.rs  validationerror.rs
Cookgram/backend/src/api/guards/: claimsguard.rs  mod.rs
Cookgram/backend/src/api/logs/: applicationlog.rs  mod.rs
Cookgram/backend/src/api/metrics/: metricsserver.rs  mod.rs
Cookgram/backend/src/api/queries/: actionquery.rs  mod.rs  query.rs
Cookgram/backend/src/api/repositories/: authenticationrepository.rs  eventrepository.rs  metarepository.rs  mod.rs  repositories.rs  userrepositories.rs
Cookgram/backend/src/api/router/: authrouter.rs  mod.rs  router.rs  userrouter.rs
Cookgram/backend/src/api/services/: authservice.rs  eventservice.rs  mod.rs  tokenservice.rs  userservice.rs
Cookgram/backend/src/api/utils/: cors.rs  mod.rs
Cookgram/backend/src/api/validators/: dtovalidator.rs  mod.rs
Cookgram/backend/src/core/: mod.rs
Cookgram/backend/src/core/address/: address.rs  location.rs  mod.rs
Cookgram/backend/src/core/animal/: animal.rs
Cookgram/backend/src/core/company/: company.rs
Cookgram/backend/src/core/entity/: entity.rs  mod.rs
Cookgram/backend/src/core/event/: event.rs  eventId.rs  eventTask.rs  mod.rs  userevent.rs
Cookgram/backend/src/core/meta/: meta.rs  metaid.rs  mod.rs
Cookgram/backend/src/core/metaobject/: metaobject.rs  mod.rs
Cookgram/backend/src/core/notification/: mod.rs  notification.rs  notificationid.rs
Cookgram/backend/src/core/recipie/: mod.rs  recipie.rs
Cookgram/backend/src/core/role/: access.rs  adminrole.rs  director.rs  employee.rs  manager.rs  mod.rs  role.rs  superadminrole.rs  userrole.rs
Cookgram/backend/src/core/session/: session.rs
Cookgram/backend/src/core/shelter/: mod.rs  shelter.rs
Cookgram/backend/src/core/state/: entitystate.rs  mod.rs  state.rs  userstate.rs
Cookgram/backend/src/core/ticket/: mod.rs  ticket.rs  ticketid.rs
Cookgram/backend/src/core/user/: authentication.rs  availableLaguages.rs  contact.rs  credentials.rs  employee.rs  manager.rs  mod.rs  personalinformation.rs  tests.rs  user.rs  userid.rs  usertypes.rs
Cookgram/backend/src/database/: mod.rs  schema.sql
PetShelter/admin-backend/: Cargo.toml  Rocket.toml  example.http
PetShelter/admin-backend/src/: config.rs  diesel_sql.rs  jwt.rs  main.rs  schema.rs
PetShelter/admin-backend/src/api/: api.rs
PetShelter/admin-backend/src/models/: meta.rs  mod.rs  pet.rs  pettype.rs  post.rs  result.rs  role.rs  user.rs
PetShelter/admin-backend/src/utils/: status.rs
(+1153 files in other folders)
