[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "uuid",
    "time"
] }
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["v4", "macro-diagnostics", "serde"] }
time = {version = "0.3.34", features = ["serde"]}
validator = { version = "0.16", features = ["derive"] }
serde = {version = "1.0.197", features = ["derive"]}
async-trait = "0.1.79"
thiserror = "1.0.58"
serde_test = "1.0.176"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.115"
bcrypt = "0.15.1"
once_cell = "1.19.0"
jsonwebtoken = "9.3.0"
axum-extra = {version = "0.9.3", features = ["typed-header"] }
rayon = "1.10.0"
crossbeam-channel = "0.5.12"