[package]
name = "admin-backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = { path="../core/lib/", features=["json"]}
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
bcrypt = "0.13.0"
jsonwebtoken = "8.1.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
parking_lot = "0.12"

[dependencies.rocket_sync_db_pools]
path = "../contrib/sync_db_pools/lib/"
features = ["diesel_sqlite_pool"]
